services/media-services/tautulli/resources/deployment-tautulli.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: media-tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8181
              name: tautulli
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-config
