services/media-services/tautulli/resources/service-tautulli.yml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media-tautulli
spec:
  ports:
    - name: tautulli
      port: 8181
      targetPort: 8181
  selector:
    app: tautulli
