services/media-services/tautulli/resources/ingress-tautulli.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  namespace: media-tautulli
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`tautulli.nebulanet.xyz`)
      kind: Rule
      services:
        - name: tautulli
          kind: Service
          port: 8181
  tls:
    secretName: tautulli-tls
